--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,8 @@
     "tabs",
     "storage",
     "webRequest",
-    "webRequestBlocking"
+    "webRequestBlocking",
+    "webNavigation"
   ]
 }
    
