Fully functional and styled. Could still use an options page. Could probably use a lot of efficiency improvement... onBeforeRequest gets called tens of times for a single page load. Still needs commenting.

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
 {
   "name": "Blacklist",
-  "version": "0.5",
-  "manifest_version": 3,
-  "description": "Very simple website blocker for personal use.",
+  "version": "0.9",
+  "manifest_version": 4,
+  
+  "description": "Blacklist is a very simple website blocker designed for personal use.",
+  "icons": {
+    "16": "icon.16.png",
+    "48": "icon.48.png",
+    "128": "icon.128.png"
+  },
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon.48.png",
     "default_popup": "popup.html"
   },
   "background": {
@@ -31,4 +37,3 @@
     "webNavigation"
   ]
 }
-   
