--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "48": "icon.48.png",
     "128": "icon.128.png"
   },
-  "homepage_url": "http://rahulgi.github.com/SiteBlocker",
+  "homepage_url": "http://rahulgi.github.com/Blacklist",
   "browser_action": {
     "default_icon": "icon.48.png",
     "default_popup": "popup.html"
