--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "Blacklist",
-  "version": "0.93",
+  "version": "1.0.0",
   "description": "Blacklist is a very simple website blocker designed for personal use.",
   "repository": "git@github.com:rahulgi/Blacklist.git",
   "author": "Rahul Gupta-Iwasaki",
   "license": "MIT",
   "scripts": {
-    "deploy": "gh-pages -d gh-pages"
+    "deploy": "NODE_DEBUG=gh-pages; gh-pages -d dist"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1"
